# gimli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: gimli_common.rs  gimli_decrypt.rs  gimli_encrypt.rs  lib.rs  main.rs
src/tests/: cipher_test.rs
